<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.example.demoapp.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/padding_20"
            android:paddingTop="@dimen/padding_20"
            android:paddingEnd="@dimen/padding_20"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/title_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_1"
                android:textColor="@color/orange"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="start"
                android:letterSpacing=".1"
                android:text="@string/title_2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_1" />

            <TextView
                android:id="@+id/pan_number_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:text="@string/pan_number"
                android:textColor="@color/grey"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_2" />

            <EditText
                android:id="@+id/pan_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_background"
                android:cursorVisible="false"
                android:importantForAutofill="no"
                android:inputType="textCapCharacters"
                android:labelFor="@id/pan_number_tv"
                android:maxLength="10"
                android:minHeight="42dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@={vm.pan}"
                android:textAllCaps="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pan_number_tv"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/birth_date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/birth_date"
                android:textColor="@color/grey"
                android:textSize="10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pan_et" />

            <EditText
                android:id="@+id/date_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_dob_background"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:minHeight="42dp"
                android:textCursorDrawable="@drawable/cursor_drawable"
                app:layout_constraintEnd_toStartOf="@+id/month_et"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/birth_date_tv"
                app:layout_constraintWidth_percent="0.2"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/month_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_dob_background"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="2"
                android:minHeight="42dp"
                android:textCursorDrawable="@drawable/cursor_drawable"
                app:layout_constraintEnd_toStartOf="@+id/year_et"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/date_et"
                app:layout_constraintTop_toBottomOf="@id/birth_date_tv"
                app:layout_constraintWidth_percent="0.2"
                tools:ignore="LabelFor,TextFields" />

            <EditText
                android:id="@+id/year_et"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_dob_background"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="4"
                android:minHeight="42dp"
                android:text="@={vm.year}"
                android:textCursorDrawable="@drawable/cursor_drawable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/month_et"
                app:layout_constraintTop_toBottomOf="@id/birth_date_tv"
                app:layout_constraintWidth_percent="0.4"
                tools:ignore="LabelFor,TextFields" />

            <TextView
                android:id="@+id/sub_title_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:gravity="start"
                android:letterSpacing=".09"
                android:text="@string/sub_text"
                android:textColor="@color/grey"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/date_et" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_state"
                android:enabled="false"
                android:text="@string/next"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_title_tv" />

            <TextView
                android:id="@+id/no_pan_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/no_pan_text"
                android:textColor="@color/light_violet"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/next_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>